# donatrade

./: .gitignore  Anchor.toml  Cargo.toml  README.md  current_idl.json  drizzle.config.ts  idl_part.json  package-lock.json  package.json  test-keypair.json
.agent/: inco-sdk-reference.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/admin/: page.tsx
app/companies/: page.tsx
app/companies/[id]/: page.tsx
app/companies/manage/: page.tsx
app/portfolio/: page.tsx
app/trade/: page.tsx
components/: ApplicationReviewModal.tsx  Header.tsx  PrivacyBadge.tsx  RegisterCompanyModal.tsx  SharesDisplay.tsx  ThemeToggle.tsx  VaultModal.tsx  VaultProvider.tsx  WalletButton.tsx
lib/: buffer-polyfill.ts  encryption.ts  idl.json  idl.ts  inco.ts  mockData.ts  solana.ts  types.ts
lib/actions/: companies.ts
lib/db/: schema.ts
programs/donatrade_program/: Cargo.toml
programs/donatrade_program/blake3_local/: Cargo.toml
programs/donatrade_program/blake3_local/src/: lib.rs
programs/donatrade_program/constant_time_eq_local/: Cargo.toml
programs/donatrade_program/constant_time_eq_local/src/: lib.rs
programs/donatrade_program/src/: lib.rs
scripts/: cleanup-db.ts  debug_accounts.js  debug_accounts.ts  debug_anchor.js  debug_anchor.ts  debug_minimal.ts  init_platform.ts  regenerate_idl.ts  test_idl_variants.ts  test_submit.ts
