[package]
name = "donatrade_program"
version = "0.1.0"
description = "Donatrade - Privacy-First Private Investment Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "donatrade_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
