[package]
name = "donatrade_program"
version = "0.1.0"
description = "Donatrade - Privacy-First Private Investment Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "donatrade_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
# Pin stable versions to avoid Edition 2024 conflicts in Solana toolchain
blake3 = "=1.7.0"
constant_time_eq = "=0.3.1"
